src/pages/channels/curiosity-cards/index.css
/* html, body {
  margin: 0;
  padding: 0;
  font-family: 'Times New Roman', Times, serif;
  font-weight: bold;
  font-stretch: condensed;
  transform: scaleX(0.85);
  transform-origin: center;
  text-align: center;
  line-height: 1;
} */

div#curiosity-cards {
  height: 100vh;
  padding: 0;
  margin: 0 auto;
  max-width: 1280px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  font-family: 'Times New Roman', Times, serif;
  font-weight: bold;
  font-stretch: condensed;
  transform: scaleX(0.85);
  transform-origin: center;
  text-align: center;
  line-height: 1;

  button {
    border: none;
    font-family: inherit;
    font-weight: normal;
    background-color: transparent;
    cursor: pointer;
    font-size: 24px;
    margin: 30px 0;
  } 
  
  button.active {
    font-weight: bold;
  }
  
  div#card {
    font-size: 90px;
  }
  
  .category-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 60px;
  }
  
  @media (max-width: 768px) {
    .category-container {
      gap: 12px;
    }
    
    button {
      font-size: 20px;
      letter-spacing: 0.2px;
    }
    
    div#card {
      font-size: 60px;
    }
  }
  
  @media (max-width: 480px) {
    .category-container {
      gap: 8px;
    }
    
    button {
      font-size: 14px;
      letter-spacing: 0px;
    }
    
    div#card {
      font-size: 45px;
    }
  }
}

